[gd_scene load_steps=12 format=3 uid="uid://8nfw8ly1pxik"]

[ext_resource type="Script" path="res://scripts/lobby.gd" id="2_vw6rg"]
[ext_resource type="Texture2D" uid="uid://cdf2gynardwvo" path="res://pixel-ui/panel_Example1.png" id="2_yt04e"]
[ext_resource type="Texture2D" uid="uid://bnjoldu8rlyh3" path="res://pixel-ui/UI_Flat_Select_01a1.png" id="3_wn6x4"]
[ext_resource type="Texture2D" uid="uid://c3i262lg466se" path="res://pixel-ui/UI_Flat_Button_Medium_Press_02a1.png" id="4_fvf1x"]
[ext_resource type="Texture2D" uid="uid://bo3fyuxak5br2" path="res://pixel-ui/UI_Flat_Button_Medium_Press_02a4.png" id="5_ftl6c"]
[ext_resource type="Texture2D" uid="uid://bj7a5cqwmi0a8" path="res://pixel-ui/UI_Flat_Button_Medium_Lock_02a4.png" id="6_qh75y"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c4ii1"]
texture = ExtResource("2_yt04e")
texture_margin_left = 50.0
texture_margin_top = 50.0
texture_margin_right = 50.0
texture_margin_bottom = 50.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_asu7n"]
texture = ExtResource("4_fvf1x")
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nb52c"]
texture = ExtResource("5_ftl6c")
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ufpm6"]
texture = ExtResource("6_qh75y")
texture_margin_top = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qt3rf"]
texture = ExtResource("4_fvf1x")
texture_margin_bottom = 5.0

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1280.0
offset_bottom = -720.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_vw6rg")

[node name="LobbyPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 319.0
offset_top = 151.0
offset_right = 998.0
offset_bottom = 463.0
theme_override_styles/panel = SubResource("StyleBoxTexture_c4ii1")

[node name="PlayerSlot1" type="Control" parent="LobbyPanel"]
anchors_preset = 0
offset_left = 81.0
offset_top = 102.0
offset_right = 181.0
offset_bottom = 282.0

[node name="PlayerPictureBorder" type="Sprite2D" parent="LobbyPanel/PlayerSlot1"]
position = Vector2(50, 30)
scale = Vector2(1.5, 1.47)
texture = ExtResource("3_wn6x4")

[node name="PlayerAvatar" type="Sprite2D" parent="LobbyPanel/PlayerSlot1"]
position = Vector2(50, 30)

[node name="PlayerName" type="Label" parent="LobbyPanel/PlayerSlot1"]
layout_mode = 0
offset_left = -16.0
offset_top = 80.0
offset_right = 120.0
offset_bottom = 103.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="PlayerSlot2" type="Control" parent="LobbyPanel"]
anchors_preset = 0
offset_left = 221.0
offset_top = 102.0
offset_right = 321.0
offset_bottom = 282.0

[node name="PlayerPictureBorder" type="Sprite2D" parent="LobbyPanel/PlayerSlot2"]
position = Vector2(50, 30)
scale = Vector2(1.5, 1.47)
texture = ExtResource("3_wn6x4")

[node name="PlayerAvatar" type="Sprite2D" parent="LobbyPanel/PlayerSlot2"]
position = Vector2(50, 30)

[node name="PlayerName" type="Label" parent="LobbyPanel/PlayerSlot2"]
layout_mode = 0
offset_left = -16.0
offset_top = 80.0
offset_right = 120.0
offset_bottom = 103.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="PlayerSlot3" type="Control" parent="LobbyPanel"]
anchors_preset = 0
offset_left = 361.0
offset_top = 102.0
offset_right = 461.0
offset_bottom = 282.0

[node name="PlayerPictureBorder" type="Sprite2D" parent="LobbyPanel/PlayerSlot3"]
position = Vector2(50, 30)
scale = Vector2(1.5, 1.47)
texture = ExtResource("3_wn6x4")

[node name="PlayerAvatar" type="Sprite2D" parent="LobbyPanel/PlayerSlot3"]
position = Vector2(50, 30)

[node name="PlayerName" type="Label" parent="LobbyPanel/PlayerSlot3"]
layout_mode = 0
offset_left = -16.0
offset_top = 80.0
offset_right = 120.0
offset_bottom = 103.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="PlayerSlot4" type="Control" parent="LobbyPanel"]
anchors_preset = 0
offset_left = 501.0
offset_top = 103.0
offset_right = 601.0
offset_bottom = 283.0

[node name="PlayerPictureBorder" type="Sprite2D" parent="LobbyPanel/PlayerSlot4"]
position = Vector2(50, 30)
scale = Vector2(1.5, 1.47)
texture = ExtResource("3_wn6x4")

[node name="PlayerAvatar" type="Sprite2D" parent="LobbyPanel/PlayerSlot4"]
position = Vector2(50, 30)

[node name="PlayerName" type="Label" parent="LobbyPanel/PlayerSlot4"]
layout_mode = 0
offset_left = -16.0
offset_top = 80.0
offset_right = 120.0
offset_bottom = 103.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="LobbyPanel"]
layout_mode = 0
offset_left = 292.0
offset_top = 218.0
offset_right = 384.0
offset_bottom = 255.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0.286275, 0.286275, 0.286275, 0.513726)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_asu7n")
theme_override_styles/hover = SubResource("StyleBoxTexture_nb52c")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ufpm6")
theme_override_styles/disabled = SubResource("StyleBoxTexture_qt3rf")
text = "START"

[node name="LobbyIdLabel" type="Label" parent="LobbyPanel"]
layout_mode = 0
offset_left = 254.0
offset_top = 53.0
offset_right = 416.0
offset_bottom = 76.0
theme_override_colors/font_color = Color(0.67451, 0, 0, 1)

[node name="CopyLobbyIdButton" type="Button" parent="LobbyPanel"]
layout_mode = 0
offset_left = 507.0
offset_top = 60.0
offset_right = 532.0
offset_bottom = 82.0

[connection signal="pressed" from="LobbyPanel/StartButton" to="." method="on_start_game_pressed"]
[connection signal="pressed" from="LobbyPanel/CopyLobbyIdButton" to="." method="on_pressed_copy_lobby_code"]
